# aadcr

./: .gitignore  Cargo.toml  LICENSE  README.md  output1.js  test.js  test1.js
crates/aadcr_unminify/: Cargo.toml
crates/aadcr_unminify/src/: lib.rs
crates/aadcr_unminify/src/passes/: mod.rs  un_argument_spread.rs  un_assign_merging.rs  un_boolean.rs  un_flip_comparisons.rs  un_infinity.rs  un_numeric_literal.rs  un_return.rs  un_sequence_expr.rs  un_template_literal.rs  un_type_constructor.rs  un_typeof.rs  un_undefined.rs  un_variable_merging.rs  un_while_loop.rs
crates/aadcr_unpacker/: Cargo.toml
crates/aadcr_unpacker/benches/: unpacker_benchmark.rs
crates/aadcr_unpacker/src/: browserify.rs  lib.rs  main.rs
crates/aadcr_unpacker/src/common/: fun_to_program.rs  mod.rs  utils.rs
crates/aadcr_unpacker/src/webpack/: jsonp.rs  mod.rs  webpack4.rs  webpack5.rs
crates/aadcr_unpacker/tests/: browserify.rs  webpack4.rs  webpack5.rs  webpack_jsonp.rs
crates/aadcr_unpacker/tests/fixtures/: jsonp.js
crates/aadcr_unpacker/tests/snapshots/: browserify.snap  webpack4.snap
src/: lib.rs  main.rs
src/unminify/: mod.rs
src/unminify/passes/: mod.rs  un_boolean.rs  un_infinity.rs  un_numeric_literal.rs  un_sequence_expr.rs  un_typeof.rs  un_undefined.rs
src/unpacker/: browserify.rs  mod.rs
src/unpacker/common/: fun_renamer.rs  fun_to_program.rs  mod.rs  utils.rs
src/unpacker/webpack/: jsonp.rs  mod.rs  webpack4.rs  webpack5.rs
tests/: browserify.rs  webpack4.rs  webpack5.rs  webpack_jsonp.rs
tests/fixtures/: browserify.js
tests/snapshots/: webpack4.snap  webpack5.snap  webpack_jsonp.snap
