[package]
name = "aadcr"
version = "0.1.0"
edition = "2021"

[dependencies]
oxc_codegen = { version = "0.31.0" }
oxc_parser = { version = "0.31.0" }
oxc_semantic = { version = "0.31.0" }
oxc_span = { version = "0.31.0" }
oxc_allocator = { version = "0.31.0" }
oxc_transformer = { version = "0.31.0" }
pico-args = { version = "0.5.0" }